Fix crash when closing session in KonsolePart via menu

This close method is also used when closing a Konsole session
via the X on the tabbar and tabheader.

FIXED-IN: 20.08.0
BUG: 420817
BUG: 420695
BUG: 415762

See merge request !87